# assignment3-scaling

./: CHANGELOG.md  README.md  pyproject.toml
cs336_scaling/: app.py  chinchilla_isoflops.ipynb  utils.py
cs336_scaling/training/: optimizer.py  run.py  training_config.py
cs336_scaling/training/model/: basic_model.py
examples/: client_example.ipynb  dashboard.html
